--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,24 @@
   display: none !important;
 }
 
+#player-name {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 10vh;
+  top: 5vh;
+  color: white;
+  font-size: 3rem;
+}
+
 .form-container {
   width: 100%;
   height: 100vh;
