--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,18 @@ $ligth-red: #FFAFAF;
     display: none !important;
 }
 
+#player-name{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    top:5vh;
+    color: white;
+    font-size: 3rem;
+}
+
 .form-container{
     width: 100%;
     height: 100vh;
